Updated the folder structure; Added webpack to bundle the code to a minified js file.

--- a/examples/smart-rockets/index.html
+++ b/examples/smart-rockets/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Rockets</title>
+    <script src="../../dist/redfinch.min.js"></script>
 </head>
 <body>
     <div id='container'></div>
     <script src="p5.min.js"></script>
-    <script type="module" src="rocket.js"></script>
-    <script type="module" src="script.js"></script>
+    <script src="rocket.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
