Added tensorflow networks, improved the example program, and made some small tweaks.

--- a/examples/smart-rockets/index.html
+++ b/examples/smart-rockets/index.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Rockets</title>
     <script src="../../dist/redfinch.min.js"></script>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
     <div id='container'></div>
     <script src="p5.min.js"></script>
     <script src="rocket.js"></script>
+    <script src="environment.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
